Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -165,7 +165,7 @@ footer.bk-footer .footer2 .columns-two-right {
 .widget.extendednavigation {
     float: right;
     position: relative;
-    max-width: 691px;
+    width: 70%;
     margin: 4px 0;
 }
 
@@ -174,7 +174,6 @@ footer.bk-footer .footer2 .columns-two-right {
 }
 
 .widget.extendednavigation ul {
-    float: left;
     margin: 0;
     padding: 0;
 }
